--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,18 @@
 <h1>Let's Graduate!</h1>
 <p>Welcome to Colin's Graduation Assessment Website</p>
 
+<%= form_for :entry, url: entries_path do |f| %>
+	<p>
+	<%= f.label :name %><br>
+	<%= f.text_field :name %>
+	</p>
+
+	<p>
+	<%= f.label :message %><br>
+	<%= f.text_area :message %>
+	</p>
+
+	<p>
+	<%= f.submit %>
+	</p>
+<% end %>
