--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
 
 <% for entry in @entries %>
 <hr>
-<p><%= entry.name %> signed the guestbook blerp ago<p>
+<p><%= entry.name %> signed the guestbook <%= time_ago_in_words(entry.created_at) %> ago<p>
 
 <p><%= entry.message %>
 
