--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Let's Graduate!</h1>
 <p>Welcome to Colin's Graduation Assessment Website</p>
+<p>Please leave a friendly message in the guestbook</p>
 
 <%= form_for :entry, url: entries_path do |f| %>
 	<p>
